--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 .idea
 .git
 mysql
+
+.env
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
